# den

./: .gitignore  AGENTS.md  Cargo.toml  build.rs  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
migrations/: 0002_auth.sql
src/: auth.rs  config.rs  frontend.rs  main.rs  middleware.rs  origin.rs  state.rs
src/api/: auth.rs  health.rs  mod.rs
web/: .prettierignore  eslint.config.mjs  index.html  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: globals.css  main.tsx  routeTree.gen.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/login/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/setup/: page.tsx
web/src/components/: dashboard.tsx  device-login-qr.tsx  passkey-list.tsx  theme-provider.tsx  theme-toggle.tsx
web/src/components/auth/: login.tsx  setup.tsx
web/src/lib/: api-fetch.ts  auth-routing.ts  auth-status.ts  webauthn.ts
web/src/routes/: __root.tsx  index.tsx  login.tsx  settings.tsx  setup.tsx
