[package]
name = "den"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
mime_guess = "2"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["compression-gzip"] }
tracing = "0.1"
tracing-subscriber = "0.3"
