[package]
name = "den"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
jsonwebtoken = "9"
mime_guess = "2"
rand = "0.9"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
xdg = "2"
