[package]
name = "den"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
toml = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["compression-gzip", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
xdg = "3"
